src/objects/Management_Device_Type_Port__c.object
<CustomObject>
    <fields>
        <fullName>Auto_Negotiation_Support__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Auto Negotiation Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Management_Device_Type__c</fullName>
        <label>Management Device Type</label>
        <referenceTo>Management_Device_Type__c</referenceTo>
        <relationshipLabel>Management Device Type Ports</relationshipLabel>
        <relationshipName>Management_Device_Type_Ports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PoE_Input__c</fullName>
        <label>PoE Input</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PoE</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PoE_Output__c</fullName>
        <label>PoE Output</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PoE</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Port_Speed__c</fullName>
        <label>Port Speed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Port_Speed</valueSetName>
        </valueSet>
    </fields>
    <label>Management Device Type Port</label>
    <nameField>
        <label>Port</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Management Device Type Ports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>